2025-09-02T00:52:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390110946 # 754
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 464 1483 / 468 1487
* notice: next accum: outdated-unq outdated-all / unq all: 464 1483 / 469 1488
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-01]

2025-08-29T00:51:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17311584960 # 750
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-29
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 462 1480 / 468 1487
* notice: next accum: outdated-unq outdated-all / unq all: 464 1483 / 468 1487
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-14] / []

2025-08-28T00:51:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17282522292 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 462 1480 / 467 1486
* notice: next accum: outdated-unq outdated-all / unq all: 462 1480 / 468 1487
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-27]

2025-08-26T00:53:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17224721612 # 747