@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-02T00:52:04Z",
-  "count_outdated" : 1483,
-  "uniques_outdated" : 464,
+  "timestamp" : "2025-09-04T00:48:29Z",
+  "count_outdated" : 1484,
+  "uniques_outdated" : 465,
   "count" : 1488,
   "uniques" : 469,
   "views" : [
-    {
-      "timestamp": "2025-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-21T00:00:00Z",
       "count": 1,
