@@ -1,3 +1,12 @@
+2025-09-04T00:48:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17449940396 # 756
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 464 1483 / 469 1488
+* notice: next accum: outdated-unq outdated-all / unq all: 465 1484 / 469 1488
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-20] / []
+
 2025-09-02T00:52:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390110946 # 754
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
